<resources>
  <string name="app_name">The Reformed Collective</string>
  <string name="action_settings">Settings</string>
  <string name="app_description">Search for topics within historical Christian documents like the creeds,
  confessions and catechisms in this app.
  The app features a search function with the ability to find the most relevant results quickly, a bible reader for reading scripture, and a notes section for storing notes of your favorite results or passages.</string>
  <string name="confession">Confession</string>
  <string name="creed">Creed</string>
  <string name="catechism_help">Search Help:</string>
  <string name="catechismPgh">
  </string>
  <string name="OK">OK</string>
  <string name="def_theme">LightMode</string>
  <string name="theme_summary">Appearance</string>
  <string name="theme_dialog_title">Theme</string>
  <string name="settings">Settings</string>
  <string name="read_button_text">Read</string>
  <string name="query_error">Entry required before search can be executed!</string>
  <string name="Source_Text" formatted="true">All documents used in this application are public domain. A big thanks for inspiration and help for this app came from https://www.reformed.org/."</string>
  <string name="View_Button">View</string>
  <string name="submit">Submit</string>
  <string name="catechism">Catechism</string>
  <string name="action_share">Share this with...</string>
  <string name="notes_section_header">Notes Section</string>
  <string name="theme_section">Theme Section</string>
  <string name="theme_section_help" formatted="true">Hit the themes button at the top of the screen to change from light to dark mode</string>
    <string name="notes_button_string">Notes</string>
    <string name="facebook_app_id">301531087243095</string>
    <string name="error_results">Search Error</string>
    <string name="home_topic">Search again?</string>
    <string name="save_note_message">Do you want to save any changes to your note?</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="exit_screen">Leave App?</string>
    <string name="home_topic_body">Do you want to perform another search?</string>
    <string name="exit_screen_body">Do you want to leave the app?</string>
    <string name="search_results_title">Search Results</string>
    <string name="intro_message">Welcome to the Reformed Collective Confession Search App!</string>
    <string name="zero_results">No Results were found for</string>
    <string name="help_line">For help, click on the help tab below.</string>
    <string name="creedPageTitle">Creed Viewer</string>
    <string name="zero_results_title">No Results were found</string>
    <string name="search_status_sorting">Sorting started</string>
    <string name="search_execution_begins">Search Execution Begins</string>
    <string name="app_site">https://play.google.com/store/apps/details?id=com.confessionsearch.release1</string>
    <string name="search_all_documents">Search All Documents?</string>
    <string name="document_type">Document Type</string>
    <string name="Search">Search</string>
    <string name="settings_page">Settings</string>
    <string name="themeLabel_String">Set Theme:</string>
    <string name="apply_theme_Text">Select a theme to apply</string>

    <string name="reformed_index_search">Reformed Index Search</string>
    <string name="search_by">Search By</string>
    <string name="topic_number">Topic/Number:</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="sources">Sources:</string>
    <string name="accessibility_checkbox_search_all">Search All Documents Checkbox</string>
    <string name="document_list_spinner_desc">Document titles combo box</string>
    <string name="no_proofs">No Proofs?</string>
    <string name="topic">Topic</string>
    <string name="question">Question</string>
    <string name="read_document">Read Document</string>
    <string name="no_answers">No Answers?</string>
    <string name="document">Document</string>
    <string name="search_options">Search Options</string>
    <string name="title_activity_notes">notesActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="subject">Subject</string>
    <string name="new_note">New Note</string>
    <string name="enter_topic_here">Enter Topic Here</string>
    <string name="notes">Notes</string>
    <string name="content">Content</string>
    <string name="new_Note_string_add">New Note</string>
    <string name="enter_title_string">Enter Title Here</string>
    <string name="enter_notes_string">Enter Notes Content Here</string>
    <string name="save_note">Save Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="share">Share</string>

    <string name="messages_header">Messages</string>
    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>

    <!-- Sync Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="other_stuff">Theme Section</string>
  <string name="home_page">Home</string>
  <string name="help_page">Help Page</string>
  <string name="advanced_search_options">Advanced Search Options</string>
  <string name="search_documents_below">Search Documents Below</string>
  <string-array name="themes">
    <item>Dark</item>
    <item>Light</item>
    <item>Dark Red</item>
    <item>Light Red</item>
  </string-array>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="bible_translation">Translation Name</string>
  <string name="bible_footer">Bible</string>

  <string name="search_tab">&lt;h3>Search Tab:&lt;/h3></string>
  <string name="help_searchTab_pgh1" formatted="true">&lt;p>&lt;ul>&lt;li> Search creeds, confessions, and catechisms here.&lt;/li>
    &lt;li> Search by topic, chapter or question, or read the document using the toggles on the top of the page.&lt;/li>
    &lt;li> Customize your search further by omitting answers or proofs, searching all documents, or sort by chapter order by hitting the buttons under Advanced Search Options.&lt;/li>&lt;/ul>&lt;/p></string>
  <string name="search_tab_pgh2">Here are the available options to you in the search: \n To search topics, hit the Topic button, Chapters/Questions in Confessions/Catechisms hit the Chapter/Question Button, To simply read the document, hit the Read button. \n For more advanced filtering such as answer/proof removal, hit the no answers/no proofs buttons, to search all documents, hit the search all documents button. This will depend on what document type you have selected. For all documents, you\'ll need the \'All\' type selected, otherwise it will be limited to what you have selected.</string>
  <string name="notes_tab_helpLabel">&lt;h3>Notes Tab:&lt;/h3></string>
    <string name="notes_tab_helpPgh" formatted="true">&lt;p>&lt;ul>&lt;li>Store notes of your favorite scripture passages, search results, and more. &lt;/li>&lt;li>Hit the Save Note button on any search result or bible reader page and you\'ll be able to instantly save a note and navigate back to your previous task.&lt;/li>&lt;li>Hit the new note button on the notes tab to create an entirely new note.&lt;/li> &lt;li>When you\'re finished, hit save note to save the note on your device.&lt;/li>&lt;/ul>&lt;/p></string>
    <string name="bible_tab_HelpLabel">&lt;h3>Bible Tab:&lt;/h3></string>
    <string name="bible_tab_helpPgh" formatted="true">&lt;p>&lt;ul>&lt;li>Read Scripture by simply selecting what translation, book, chapter, and verse you want to navigate to.&lt;/li>&lt;li>If you want to read an entire book of scripture, simply leave the chapter field on All.&lt;/li>&lt;li>The same goes for reading an entire chapter of a book of Scripture, leave the verse field set to all. \nHit the read button and you\'ll be reading through scripture.&lt;/li&lt;/ul>&lt;/p></string>
    <string name="other_stuff_tab">Other Stuff:</string>
    <string name="copyright_disclaimer">&lt;p>Sources for these documents are in public domain since they are old. Bible translations will be cited below alongside any copyrighted content used with permission.&lt;/p></string>
    <string name="share_entry">Each search result page has the share button enabled to allow for easy sharing with your friends or favorite social media site.</string>
    <string name="sources_tab">&lt;h3>Sources:&lt;/h3></string>
    <string name="available_options">Available Options:</string>
    <string name="sort_by_chapter">Sort By Chapter?</string>
    <string name="sort_by">Sort By</string>
    <string name="_0_9_asc">0-9 Ascending</string>
    <string name="_0_9_desc">0-9 Descending</string>
    <string name="matches_low_to_high">Matches Ascending</string>
    <string name="matches_high_to_low">Matches Descending</string>
    <string name="sort_byhdr">Sort By:</string>
    <string name="enter_content_here">Enter Content Here</string>
    <string name="title">Title</string>
    <string name="note_content">Note Content</string>
    <string name="note_title">Note Title</string>
    <string name="search_topic_question">Search Topic/Question #</string>
    <string name="chapter">Chapter</string>
    <string name="bible_reader">Bible Reader</string>
    <string name="book">Book</string>
    <string name="verse">Verse</string>
    <string name="placeholder_text_ch_Title">chapterHeader</string>
    <string name="placeholder_text_here">ChapterTextHere</string>
    <string name="timestamp">TimeStamp</string>
    <string name="lines">lines</string>
    <string name="title_here">Title_Here</string>
    <string name="ratings_suggestion">If you enjoyed using my application, please leave a rating on the Play Store!</string>
    <string name="emailDev">Email the developer with feature requests or bugs spotted.</string>
    <string name="devEmail">boomersooner12345@gmail.com</string>
    <string name="sort_created_date">Date Created</string>
    <string name="sort_updated_date">Recently Updated</string>
    <string name="sort_aplhabetical">A to Z</string>
    <string name="note_tags">Note Tags</string>
    <string-array name="layoutOptionLabels_Array">
        <item>Linear</item>
        <item>Staggered</item>
        <item>Grid</item>
    </string-array>
    <string-array name="layoutOptionValues_Array">
        <item>linear</item>
        <item>staggered</item>
        <item>grid</item>
    </string-array>
    <string name="dev_email_uri">mailto:Boomersooner12345@gmail.com</string>
</resources>