<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/Search"
        android:icon="@drawable/search_light_drawable"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notesSortAction"
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort_order"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/dateUpdated"
                android:title="@string/sort_updated_date"
                android:icon="@drawable/ic_sort_date" />
            <item
                android:id="@+id/alphabetized"
                android:title="@string/sort_aplhabetical"
                android:icon="@drawable/ic_sort_a_to_z" />
        </menu>


    </item>
    <item
        android:id="@+id/helpPage"
        android:title="Help"
        android:icon="@drawable/help_icon"
        app:showAsAction="ifRoom" />

</menu>