<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/help_page_Layout"
        android:background="?attr/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/help_page"

            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appTitle"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />


        <TextView
            android:id="@+id/confessionHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appTitle"
            android:layout_alignParentStart="true"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/catechism_help"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/confessionPgh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confessionHelp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/confessionPgh" />

        <TextView
            android:id="@+id/creedHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confessionPgh"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/notes_section_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/creedPgh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/creedHelp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/notes_section_help" />

        <TextView
            android:id="@+id/otherStuff"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/creedPgh"
            android:text="@string/other_stuff" />

        <TextView
            android:id="@+id/otherPgh"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/otherStuff"
            android:text="@string/other_pgh"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/searchTypeItem"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:visibility="visible"
            android:layout_marginBottom="19dp"
            android:layout_marginEnd="73dp"
            android:text="@string/home_page" />


        <TextView
            android:id="@+id/sourceLabel"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/otherPgh"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:text="@string/sources"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/sourceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sourceLabel"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/Source_Text" />


    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        android:layout_gravity="bottom"
        android:textColor="?attr/secondaryTextColor"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
