<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.SearchFragment"
    android:id="@+id/layoutMain"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    style="@android:style/Widget.Material.ScrollView"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        tools:context=".ui.home.SearchFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/option_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layoutDirection="locale"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="@id/searchByLabel"
            app:layout_constraintTop_toBottomOf="@+id/searchByLabel"
            app:selectionRequired="true"
            app:singleSelection="true">


            <com.google.android.material.chip.Chip
                android:id="@+id/topicChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:padding="5dp"
                android:text="@string/topic"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:chipEndPadding="5dp"
                app:chipIcon="@drawable/ic_chip_topic_icon"
                app:chipIconVisible="true"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/questionChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:padding="5dp"
                android:text="@string/question"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:chipIcon="@drawable/ic_chip_question_icon"
                app:chipIconVisible="true"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/readDocsChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:padding="5dp"
                android:text="@string/read_document"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:chipIcon="@drawable/ic_nav_bible"
                app:chipIconVisible="true"
                app:closeIconEnabled="false" />
        </com.google.android.material.chip.ChipGroup>

        <!--<HorizontalScrollView
            android:id="@+id/searchOptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optionLabel"
            app:layout_constraintVertical_bias="1.0">-->

        <!-- <com.google.android.material.chip.ChipGroup
             android:id="@+id/chip_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layoutDirection="locale"
             android:padding="5dp"
             app:selectionRequired="false"
             app:singleLine="false">-->

        <com.google.android.material.chip.Chip
            android:id="@+id/answerChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:checkable="true"
            android:padding="5dp"
            android:text="@string/no_answers"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIcon="@drawable/ic_chip_no_icon"
            app:chipIconVisible="true"
            app:closeIconVisible="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optionLabel" />

        <com.google.android.material.chip.Chip
            android:id="@+id/proofChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="160dp"
            android:checkable="true"
            android:padding="5dp"
            android:text="@string/no_proofs"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIcon="@drawable/ic_chip_no_icon"
            app:chipIconVisible="true"


            app:closeIconVisible="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerChip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/searchAllChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:checkable="true"
            android:padding="5dp"
            android:text="@string/search_all_documents"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIcon="@drawable/ic_chip_searchalldocs_icon"
            app:chipIconVisible="true"

            app:closeIconVisible="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optionLabel" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sortByChapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="160dp"
            android:checkable="true"
            android:padding="5dp"
            android:text="@string/sort_by_chapter"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIcon="@drawable/ic_chip_sortchapter_icon"
            app:chipIconVisible="true"
            app:closeIconVisible="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchAllChip" />
        <!-- </com.google.android.material.chip.ChipGroup>-->


        <!-- </HorizontalScrollView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/search_topic_question"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_group"
            app:startIconDrawable="@drawable/ic_search_box_search_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchBoxTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:contentDescription="@string/Search"
                tools:ignore="EditableContentDescCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/documentTypeSpinner"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:dropDownWidth="wrap_content"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:spinnerMode="dialog"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeTVLabel"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="269dp" />

        <Spinner
            android:id="@+id/documentNameSpinner"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/document_list_spinner_desc"
            android:dropDownWidth="wrap_content"
            android:focusable="true"
            android:minHeight="48dp"
            android:spinnerMode="dialog"
            android:textAlignment="viewEnd"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confessionLabel"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="270dp" />

        <TextView
            android:id="@+id/confessionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/documentNameSpinner"
            android:text="@string/document"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/documentTypeSpinner"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="86dp" />

        <TextView
            android:id="@+id/optionLabel"


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"

            android:text="@string/advanced_search_options"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/documentNameSpinner"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="125dp" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/search_documents_below"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="30dp"
            tools:layout_conversion_absoluteWidth="230dp" />

        <TextView

            android:id="@+id/searchByLabel"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/option_group"
            android:text="@string/search_options"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appTitle"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="83dp" />


        <TextView
            android:id="@+id/typeTVLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/documentTypeSpinner"
            android:text="@string/document_type"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchContainer"
            tools:layout_conversion_absoluteHeight="60dp"
            tools:layout_conversion_absoluteWidth="83dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>



